// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ilib-scriptinfo sample app case correction functionality should correct lowercase input to proper case 1`] = `
"
Script Information for "latn"
==================================================
Code             | Latn
Code Number      | 215
Name             | Latin
Long Code        | Latin
Script Direction | 📝 LTR Left-to-Right
IME Requirement  | ⌨️  No IME required
Casing Info      | 🔤 Uses letter case (uppercase/lowercase)
==================================================


"
`;

exports[`ilib-scriptinfo sample app case correction functionality should correct uppercase input to proper case 1`] = `
"
Script Information for "LATN"
==================================================
Code             | Latn
Code Number      | 215
Name             | Latin
Long Code        | Latin
Script Direction | 📝 LTR Left-to-Right
IME Requirement  | ⌨️  No IME required
Casing Info      | 🔤 Uses letter case (uppercase/lowercase)
==================================================


"
`;

exports[`ilib-scriptinfo sample app error handling should handle unknown script code with no matches 1`] = `
"
❌ Unknown script code: "xyz"
💡 No similar script codes found for "xyz"
💡 Try one of these valid script codes:
   Adlm - Adlam
   Afak - Afaka
   Aghb - Caucasian Albanian
   Ahom - Ahom, Tai Ahom
   Arab - Arabic
   Aran - Arabic (Nastaliq variant)
   Armi - Imperial Aramaic
   Armn - Armenian
   Avst - Avestan
   Bali - Balinese
   ... and 216 more scripts


"
`;

exports[`ilib-scriptinfo sample app error handling should show error for too many arguments 1`] = `
"Error: Invalid number of arguments

Usage: node index.js <script-code>
Example: node index.js Latn
Example: node index.js Arab
Example: node index.js Hani

For more information, run: node index.js --help
"
`;

exports[`ilib-scriptinfo sample app help functionality should show help when --help flag is provided 1`] = `
"
ilib-scriptinfo Sample App
==========================

A command-line tool that demonstrates the ilib-scriptinfo package by looking up
information about writing scripts based on ISO 15924 codes.

USAGE
-----
node index.js <script-code>
node index.js --help

PARAMETERS
----------
<script-code>    ISO 15924 4-letter script code (e.g., Latn, Arab, Hani)

OPTIONS
-------
--help           Show this help message

EXAMPLES
--------
node index.js Latn          # Look up Latin script information
node index.js Arab          # Look up Arabic script information
node index.js Hani          # Look up Han (Chinese) script information
node index.js Deva          # Look up Devanagari script information
node index.js Cyrl          # Look up Cyrillic script information

OUTPUT
------
The tool displays all available script properties in a tabular format:
• Code: ISO 15924 4-letter script code
• Code Number: ISO 15924 numeric code
• Name: English name of the script
• Long Code: Long identifier for the script
• Script Direction: Writing direction (ltr/rtl)
• Needs IME: Whether script requires Input Method Editor
• Uses Casing: Whether script uses letter case

COMMON SCRIPT CODES
------------------
Latn - Latin
Arab - Arabic
Hani - Han (Chinese)
Deva - Devanagari
Cyrl - Cyrillic
Grek - Greek
Hebr - Hebrew
Thai - Thai
Hang - Hangul (Korean)
Kana - Katakana
Hira - Hiragana

For a complete list of all available script codes, the tool will show
examples when an unknown script code is provided.

MORE INFORMATION
----------------
This is a sample application demonstrating the ilib-scriptinfo package.
For more information about the package, see the main documentation.

"
`;

exports[`ilib-scriptinfo sample app help functionality should show help when no arguments provided 1`] = `
"
ilib-scriptinfo Sample App
==========================

A command-line tool that demonstrates the ilib-scriptinfo package by looking up
information about writing scripts based on ISO 15924 codes.

USAGE
-----
node index.js <script-code>
node index.js --help

PARAMETERS
----------
<script-code>    ISO 15924 4-letter script code (e.g., Latn, Arab, Hani)

OPTIONS
-------
--help           Show this help message

EXAMPLES
--------
node index.js Latn          # Look up Latin script information
node index.js Arab          # Look up Arabic script information
node index.js Hani          # Look up Han (Chinese) script information
node index.js Deva          # Look up Devanagari script information
node index.js Cyrl          # Look up Cyrillic script information

OUTPUT
------
The tool displays all available script properties in a tabular format:
• Code: ISO 15924 4-letter script code
• Code Number: ISO 15924 numeric code
• Name: English name of the script
• Long Code: Long identifier for the script
• Script Direction: Writing direction (ltr/rtl)
• Needs IME: Whether script requires Input Method Editor
• Uses Casing: Whether script uses letter case

COMMON SCRIPT CODES
------------------
Latn - Latin
Arab - Arabic
Hani - Han (Chinese)
Deva - Devanagari
Cyrl - Cyrillic
Grek - Greek
Hebr - Hebrew
Thai - Thai
Hang - Hangul (Korean)
Kana - Katakana
Hira - Hiragana

For a complete list of all available script codes, the tool will show
examples when an unknown script code is provided.

MORE INFORMATION
----------------
This is a sample application demonstrating the ilib-scriptinfo package.
For more information about the package, see the main documentation.

"
`;

exports[`ilib-scriptinfo sample app partial matching functionality should find partial matches for 'arab' 1`] = `
"
Script Information for "arab"
==================================================
Code             | Arab
Code Number      | 160
Name             | Arabic
Long Code        | Arabic
Script Direction | 📝 RTL Right-to-Left
IME Requirement  | ⌨️  No IME required
Casing Info      | 🔤 No letter case
==================================================


"
`;

exports[`ilib-scriptinfo sample app partial matching functionality should find partial matches for 'han' 1`] = `
"
❌ Unknown script code: "han"
🔍 Found 12 similar script code(s):
   Dupl - Duployan shorthand, Duployan stenography
   Hanb - Han with Bopomofo (alias for Han + Bopomofo)
   Hang - Hangul (Hangŭl, Hangeul)
   Hani - Han (Hanzi, Kanji, Hanja)
   Hano - Hanunoo (Hanunóo)
   Hans - Han (Simplified variant)
   Hant - Han (Traditional variant)
   Hntl - Han (Traditional variant) with Latin (alias for Hant + Latn)
   Jamo - Jamo (alias for Jamo subset of Hangul)
   Jpan - Japanese (alias for Han + Hiragana + Katakana)
   Kore - Korean (alias for Hangul + Han)
   Rohg - Hanifi Rohingya


"
`;

exports[`ilib-scriptinfo sample app partial matching functionality should find partial matches for 'lat' 1`] = `
"
❌ Unknown script code: "lat"
🔍 Found 4 similar script code(s):
   Hntl - Han (Traditional variant) with Latin (alias for Hant + Latn)
   Latf - Latin (Fraktur variant)
   Latg - Latin (Gaelic variant)
   Latn - Latin


"
`;

exports[`ilib-scriptinfo sample app valid script codes should display Arabic script information correctly 1`] = `
"
Script Information for "Arab"
==================================================
Code             | Arab
Code Number      | 160
Name             | Arabic
Long Code        | Arabic
Script Direction | 📝 RTL Right-to-Left
IME Requirement  | ⌨️  No IME required
Casing Info      | 🔤 No letter case
==================================================


"
`;

exports[`ilib-scriptinfo sample app valid script codes should display Han script information correctly 1`] = `
"
Script Information for "Hani"
==================================================
Code             | Hani
Code Number      | 500
Name             | Han (Hanzi, Kanji, Hanja)
Long Code        | Han
Script Direction | 📝 LTR Left-to-Right
IME Requirement  | ⌨️  Requires Input Method Editor
Casing Info      | 🔤 No letter case
==================================================


"
`;

exports[`ilib-scriptinfo sample app valid script codes should display Latin script information correctly 1`] = `
"
Script Information for "Latn"
==================================================
Code             | Latn
Code Number      | 215
Name             | Latin
Long Code        | Latin
Script Direction | 📝 LTR Left-to-Right
IME Requirement  | ⌨️  No IME required
Casing Info      | 🔤 Uses letter case (uppercase/lowercase)
==================================================


"
`;
